src/objects/Subscription_Vendor_Publication__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscription (Vendor) Publications</relationshipLabel>
        <relationshipName>Subscription_Vendor_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fri__c</fullName>
        <label>Fri</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HDS_Subscription_Id__c</fullName>
        <label>HDS Subscription Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mon__c</fullName>
        <label>Mon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Subscription (Vendor) Publications</relationshipLabel>
        <relationshipName>Subscription_Vendor_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PHd__c</fullName>
        <label>PHd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHe__c</fullName>
        <label>PHe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Subscription (Vendor) Publications</relationshipLabel>
        <relationshipName>Subscription_Vendor_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sat__c</fullName>
        <label>Sat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription (Vendor)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Subscription_Vendor__c.Account__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Subscription_Vendor__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Cancelled</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Subscription (Vendor) Publications</relationshipLabel>
        <relationshipName>Subscription_Vendor_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sun__c</fullName>
        <label>Sun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thu__c</fullName>
        <label>Thu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tue__c</fullName>
        <label>Tue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSS_Source_Type_ID__c</fullName>
        <label>VSS Source Type ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSS_Subscription_ID__c</fullName>
        <label>VSS Subscription ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Subscription_Pub_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Subscription Pub Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wed__c</fullName>
        <label>Wed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Subscription (Vendor) Publication</label>
    <nameField>
        <displayFormat>SVP{0000000000}</displayFormat>
        <label>Subscription (Vendor) Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription (Vendor) Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>